@@ -1,3 +1,8 @@
+2011-12-08  Nikodemus Siivola  <nikodemus@random-state.net>
+
+	* slime-cl-indent.el (common-lisp-init-standard-indentation): New function,
+	wraps initialization of the common-lisp-indent-function properties.
+
 2011-12-06  Didier Verna  <didier@xemacs.org>
 
 	* slime-asdf.el (slime-asdf): New custom group.
